# SimpleServer

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.sh
.github/workflows/: codeql.yml
3rd/: CMakeLists.txt
3rd/hiredis/: CMakeLists.txt
3rd/leveldb/: CMakeLists.txt
3rd/leveldb/db/: c.cc  db_impl.cc  leveldb_main.cc  write_batch.cc
3rd/leveldb/helpers/memenv/: memenv.cc
3rd/leveldb/port/: port.h  port_win.cc  port_win.h
3rd/leveldb/port/win/: port_win32.cc  port_win32.h
3rd/leveldb/util/: comparator.cc  env_win32.cc
cmake/: 3rd.cmake  libs.cmake  macros.cmake  servers.cmake
doc/: bigtable.txt  leveldb.dot
libs/common/: blockingqueue.h  buffer.cpp  buffer.h  common.h  log.cpp  log.h  singleton.h  thread_pool.h
libs/db/: redis_async.cpp  redis_async.h  redis_factory.cpp  redis_factory.h  redis_sync.cpp  redis_sync.h
libs/network/: channel.cpp  channel.h  event_dispatcher.cpp  event_dispatcher.h  session.cpp  session.h  socket_base.cpp  socket_base.h  socket_tcp.cpp  socket_tcp.h  timer.cpp  timer.h  timer_factory.cpp  timer_factory.h
libs/protos/: common.proto  private_server_command.proto  test.proto
libs/protos/cs/: common.proto
libs/protos/ss/: private_server_command.proto
libs/resource/: config.cpp  config.h  resource _manager.cpp  resource _manager.h
libs/server/: server_base.cpp  server_base.h  server_register.cpp  server_register.h
res/: config.lua
src/: main.cpp  my_server.cpp  my_server.h  player_session.h  redis_test.cpp  server.cpp
src/center/: center_server.cpp  center_server.h  main.cpp  server_session.cpp  server_session.h
src/connector/: connector_server.cpp  connector_server.h  main.cpp
src/db/: db_server.cpp  db_server.h  main.cpp
src/network/: event_dispatcher.cpp  socket_base.cpp  socket_base.h
src/test/client_test/: main.cpp
src/test/redis_test/: redis_test.cpp
src/test/server_test/: my_server.cpp  my_server.h  player_session.cpp  player_session.h  server.cpp
src/test/test/: test.cpp
